--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css" />
         <!-- endbower -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'|link…rel='stylesheet' type='text/css'|link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
         <script src="../bower_components/modernizr/src/Modernizr.js"></script>
     </head>
     <body>
@@ -31,6 +32,7 @@
         <!-- MAIN CONTENT AND INJECTED VIEWS -->
         <main class="container" ng-app="bitter-fit">
           <ng-view><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></ng-view>
+
         </main>
 
         <!-- bower:js -->
