--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         <!-- endbower -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'|link…rel='stylesheet' type='text/css'|link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="css/main.css">
         <script src="../bower_components/modernizr/src/Modernizr.js"></script>
     </head>
     <body>
@@ -23,14 +24,14 @@
 
         <!-- Add your site or application content here -->
         <header>
-          <h1>bitter-fit</h1>
           <nav class="header-tabs">
             <a href="#/activity">activity</a>
             <a href="#/login">login</a>
           </nav>
+          <h1>bitter-fit</h1>
         </header>
         <!-- MAIN CONTENT AND INJECTED VIEWS -->
-        <main class="container" ng-app="bitter-fit">
+        <main class="container">
           <ng-view><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></ng-view>
 
         </main>
