ngRoute set up to link to partials

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
           <h1>bitter-fit</h1>
         </header>
         <!-- MAIN CONTENT AND INJECTED VIEWS -->
-        <main class="container">
+        <main class="container" ng-app="bitter-fit">
           <ng-view><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></ng-view>
 
         </main>
